// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxAggregation render initial state with all props set 1`] = `
<AggregationBox
  headerAction={null}
  name="Test"
>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="prefix_bucket1"
    type="flex"
  >
    <Col>
      <Checkbox
        indeterminate={false}
        onChange={[Function]}
      >
        <span
          data-test-id="checkbox-aggregation-option-bucket1"
        >
          bucket1
        </span>
      </Checkbox>
    </Col>
    <Col>
      <UnclickableTag>
        <FormattedNumber>
          1000000
        </FormattedNumber>
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="prefix_bucket2"
    type="flex"
  >
    <Col>
      <Checkbox
        indeterminate={false}
        onChange={[Function]}
      >
        <span
          data-test-id="checkbox-aggregation-option-bucket2"
        >
          bucket2
        </span>
      </Checkbox>
    </Col>
    <Col>
      <UnclickableTag>
        <FormattedNumber>
          2
        </FormattedNumber>
      </UnclickableTag>
    </Col>
  </Row>
</AggregationBox>
`;

exports[`CheckboxAggregation render initial state with bucketHelp 1`] = `
<AggregationBox
  headerAction={null}
  name="Test"
>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="prefix_bucket1"
    type="flex"
  >
    <Col>
      <Checkbox
        indeterminate={false}
        onChange={[Function]}
      >
        <span
          data-test-id="checkbox-aggregation-option-bucket1"
        >
          bucket1
           
          <HelpIconTooltip
            help={
              <React.Fragment>
                Published papers are believed to have undergone rigorous peer review.
                 
                <ExternalLink
                  as="a"
                  href="https://inspirehep.net/info/faq/general#published"
                >
                  Learn More
                </ExternalLink>
              </React.Fragment>
            }
          />
        </span>
      </Checkbox>
    </Col>
    <Col>
      <UnclickableTag>
        <FormattedNumber>
          1
        </FormattedNumber>
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="prefix_bucket2"
    type="flex"
  >
    <Col>
      <Checkbox
        indeterminate={false}
        onChange={[Function]}
      >
        <span
          data-test-id="checkbox-aggregation-option-bucket2"
        >
          bucket2
           
          <HelpIconTooltip
            help={
              <React.Fragment>
                Published papers are believed to have undergone rigorous peer review.
                 
              </React.Fragment>
            }
          />
        </span>
      </Checkbox>
    </Col>
    <Col>
      <UnclickableTag>
        <FormattedNumber>
          2
        </FormattedNumber>
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="prefix_bucket3"
    type="flex"
  >
    <Col>
      <Checkbox
        indeterminate={false}
        onChange={[Function]}
      >
        <span
          data-test-id="checkbox-aggregation-option-bucket3"
        >
          bucket3
           
          <HelpIconTooltip
            help={
              <React.Fragment>
                 
                <ExternalLink
                  as="a"
                  href="https://inspirehep.net/info/faq/general#published"
                >
                  Learn More
                </ExternalLink>
              </React.Fragment>
            }
          />
        </span>
      </Checkbox>
    </Col>
    <Col>
      <UnclickableTag>
        <FormattedNumber>
          3
        </FormattedNumber>
      </UnclickableTag>
    </Col>
  </Row>
</AggregationBox>
`;

exports[`CheckboxAggregation render initial state without splitDisplayName 1`] = `
<AggregationBox
  headerAction={null}
  name="Test"
>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket1"
    type="flex"
  >
    <Col>
      <Checkbox
        checked={true}
        indeterminate={false}
        onChange={[Function]}
      >
        <span
          data-test-id="checkbox-aggregation-option-bucket1"
        >
          bucket1
        </span>
      </Checkbox>
    </Col>
    <Col>
      <UnclickableTag>
        <FormattedNumber>
          1
        </FormattedNumber>
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket2"
    type="flex"
  >
    <Col>
      <Checkbox
        indeterminate={false}
        onChange={[Function]}
      >
        <span
          data-test-id="checkbox-aggregation-option-bucket2"
        >
          bucket2
        </span>
      </Checkbox>
    </Col>
    <Col>
      <UnclickableTag>
        <FormattedNumber>
          2
        </FormattedNumber>
      </UnclickableTag>
    </Col>
  </Row>
</AggregationBox>
`;

exports[`CheckboxAggregation render more than 10 after show more clicked 1`] = `
<AggregationBox
  headerAction={null}
  name="Test"
>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket1"
    type="flex"
  >
    <Col>
      <Checkbox
        checked={true}
        indeterminate={false}
        onChange={[Function]}
      >
        <span
          data-test-id="checkbox-aggregation-option-bucket1"
        >
          bucket1
        </span>
      </Checkbox>
    </Col>
    <Col>
      <UnclickableTag>
        <FormattedNumber>
          1
        </FormattedNumber>
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket2"
    type="flex"
  >
    <Col>
      <Checkbox
        indeterminate={false}
        onChange={[Function]}
      >
        <span
          data-test-id="checkbox-aggregation-option-bucket2"
        >
          bucket2
        </span>
      </Checkbox>
    </Col>
    <Col>
      <UnclickableTag>
        <FormattedNumber>
          2
        </FormattedNumber>
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket3"
    type="flex"
  >
    <Col>
      <Checkbox
        indeterminate={false}
        onChange={[Function]}
      >
        <span
          data-test-id="checkbox-aggregation-option-bucket3"
        >
          bucket3
        </span>
      </Checkbox>
    </Col>
    <Col>
      <UnclickableTag>
        <FormattedNumber>
          3
        </FormattedNumber>
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket4"
    type="flex"
  >
    <Col>
      <Checkbox
        indeterminate={false}
        onChange={[Function]}
      >
        <span
          data-test-id="checkbox-aggregation-option-bucket4"
        >
          bucket4
        </span>
      </Checkbox>
    </Col>
    <Col>
      <UnclickableTag>
        <FormattedNumber>
          4
        </FormattedNumber>
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket5"
    type="flex"
  >
    <Col>
      <Checkbox
        indeterminate={false}
        onChange={[Function]}
      >
        <span
          data-test-id="checkbox-aggregation-option-bucket5"
        >
          bucket5
        </span>
      </Checkbox>
    </Col>
    <Col>
      <UnclickableTag>
        <FormattedNumber>
          2
        </FormattedNumber>
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket6"
    type="flex"
  >
    <Col>
      <Checkbox
        indeterminate={false}
        onChange={[Function]}
      >
        <span
          data-test-id="checkbox-aggregation-option-bucket6"
        >
          bucket6
        </span>
      </Checkbox>
    </Col>
    <Col>
      <UnclickableTag>
        <FormattedNumber>
          2
        </FormattedNumber>
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket7"
    type="flex"
  >
    <Col>
      <Checkbox
        indeterminate={false}
        onChange={[Function]}
      >
        <span
          data-test-id="checkbox-aggregation-option-bucket7"
        >
          bucket7
        </span>
      </Checkbox>
    </Col>
    <Col>
      <UnclickableTag>
        <FormattedNumber>
          2
        </FormattedNumber>
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket8"
    type="flex"
  >
    <Col>
      <Checkbox
        indeterminate={false}
        onChange={[Function]}
      >
        <span
          data-test-id="checkbox-aggregation-option-bucket8"
        >
          bucket8
        </span>
      </Checkbox>
    </Col>
    <Col>
      <UnclickableTag>
        <FormattedNumber>
          2
        </FormattedNumber>
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket9"
    type="flex"
  >
    <Col>
      <Checkbox
        indeterminate={false}
        onChange={[Function]}
      >
        <span
          data-test-id="checkbox-aggregation-option-bucket9"
        >
          bucket9
        </span>
      </Checkbox>
    </Col>
    <Col>
      <UnclickableTag>
        <FormattedNumber>
          2
        </FormattedNumber>
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket10"
    type="flex"
  >
    <Col>
      <Checkbox
        indeterminate={false}
        onChange={[Function]}
      >
        <span
          data-test-id="checkbox-aggregation-option-bucket10"
        >
          bucket10
        </span>
      </Checkbox>
    </Col>
    <Col>
      <UnclickableTag>
        <FormattedNumber>
          2
        </FormattedNumber>
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket11"
    type="flex"
  >
    <Col>
      <Checkbox
        indeterminate={false}
        onChange={[Function]}
      >
        <span
          data-test-id="checkbox-aggregation-option-bucket11"
        >
          bucket11
        </span>
      </Checkbox>
    </Col>
    <Col>
      <UnclickableTag>
        <FormattedNumber>
          2
        </FormattedNumber>
      </UnclickableTag>
    </Col>
  </Row>
</AggregationBox>
`;

exports[`CheckboxAggregation renders with show more button if buckets are more than 10 1`] = `
<AggregationBox
  headerAction={null}
  name="Test"
>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket1"
    type="flex"
  >
    <Col>
      <Checkbox
        checked={true}
        indeterminate={false}
        onChange={[Function]}
      >
        <span
          data-test-id="checkbox-aggregation-option-bucket1"
        >
          bucket1
        </span>
      </Checkbox>
    </Col>
    <Col>
      <UnclickableTag>
        <FormattedNumber>
          1
        </FormattedNumber>
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket2"
    type="flex"
  >
    <Col>
      <Checkbox
        indeterminate={false}
        onChange={[Function]}
      >
        <span
          data-test-id="checkbox-aggregation-option-bucket2"
        >
          bucket2
        </span>
      </Checkbox>
    </Col>
    <Col>
      <UnclickableTag>
        <FormattedNumber>
          2
        </FormattedNumber>
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket3"
    type="flex"
  >
    <Col>
      <Checkbox
        indeterminate={false}
        onChange={[Function]}
      >
        <span
          data-test-id="checkbox-aggregation-option-bucket3"
        >
          bucket3
        </span>
      </Checkbox>
    </Col>
    <Col>
      <UnclickableTag>
        <FormattedNumber>
          3
        </FormattedNumber>
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket4"
    type="flex"
  >
    <Col>
      <Checkbox
        indeterminate={false}
        onChange={[Function]}
      >
        <span
          data-test-id="checkbox-aggregation-option-bucket4"
        >
          bucket4
        </span>
      </Checkbox>
    </Col>
    <Col>
      <UnclickableTag>
        <FormattedNumber>
          4
        </FormattedNumber>
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket5"
    type="flex"
  >
    <Col>
      <Checkbox
        indeterminate={false}
        onChange={[Function]}
      >
        <span
          data-test-id="checkbox-aggregation-option-bucket5"
        >
          bucket5
        </span>
      </Checkbox>
    </Col>
    <Col>
      <UnclickableTag>
        <FormattedNumber>
          2
        </FormattedNumber>
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket6"
    type="flex"
  >
    <Col>
      <Checkbox
        indeterminate={false}
        onChange={[Function]}
      >
        <span
          data-test-id="checkbox-aggregation-option-bucket6"
        >
          bucket6
        </span>
      </Checkbox>
    </Col>
    <Col>
      <UnclickableTag>
        <FormattedNumber>
          2
        </FormattedNumber>
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket7"
    type="flex"
  >
    <Col>
      <Checkbox
        indeterminate={false}
        onChange={[Function]}
      >
        <span
          data-test-id="checkbox-aggregation-option-bucket7"
        >
          bucket7
        </span>
      </Checkbox>
    </Col>
    <Col>
      <UnclickableTag>
        <FormattedNumber>
          2
        </FormattedNumber>
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket8"
    type="flex"
  >
    <Col>
      <Checkbox
        indeterminate={false}
        onChange={[Function]}
      >
        <span
          data-test-id="checkbox-aggregation-option-bucket8"
        >
          bucket8
        </span>
      </Checkbox>
    </Col>
    <Col>
      <UnclickableTag>
        <FormattedNumber>
          2
        </FormattedNumber>
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket9"
    type="flex"
  >
    <Col>
      <Checkbox
        indeterminate={false}
        onChange={[Function]}
      >
        <span
          data-test-id="checkbox-aggregation-option-bucket9"
        >
          bucket9
        </span>
      </Checkbox>
    </Col>
    <Col>
      <UnclickableTag>
        <FormattedNumber>
          2
        </FormattedNumber>
      </UnclickableTag>
    </Col>
  </Row>
  <Row
    className="mb2"
    gutter={0}
    justify="space-between"
    key="bucket10"
    type="flex"
  >
    <Col>
      <Checkbox
        indeterminate={false}
        onChange={[Function]}
      >
        <span
          data-test-id="checkbox-aggregation-option-bucket10"
        >
          bucket10
        </span>
      </Checkbox>
    </Col>
    <Col>
      <UnclickableTag>
        <FormattedNumber>
          2
        </FormattedNumber>
      </UnclickableTag>
    </Col>
  </Row>
  <SecondaryButton
    onClick={[Function]}
  >
    Show 
    1
     more
  </SecondaryButton>
</AggregationBox>
`;
